--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
+
+    "homepage": "https://<your-username>.github.io/<your-repo-name>/",
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
+
   }
 }
